# gitcolombo

./: .gitignore  README.md  docs.md  gitcolombo.html  gitcolombo.py  pyproject.toml  test_gitcolombo.py  test_gitcolombo_e2e.py
.github/workflows/: python-publish.yml  tests.yml
gitcolombo/: __init__.py  __main__.py  __version__.py
